--- a/style.css
+++ b/style.css
@@ -1,269 +1,269 @@
 /* GENERAL */
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
+body { /* Font of page */
+  font-family: "Poppins", sans-serif;
 }
 
-html{
-    scroll-behavior: smooth;
+html { 
+  scroll-behavior: smooth;
 }
-p{
-    color: rgb(85, 85, 85);
+p {
+  color: rgb(85, 85, 85);
 }
 
 /* Transitions */
-a, 
-.btn{
-    transition: all 300ms ease;
+a,
+.btn {
+  transition: all 300ms ease;
 }
 /* Desktop nav */
-nav, 
-.nav-links{
-display: flex;
+nav,
+.nav-links {
+  display: flex;
 }
-nav{
-    justify-content: space-around;
-    align-items: center;
-    height: 17vh; /*match screen height*/
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh; /*match screen height*/
 }
-.nav-links{
-    gap: 2rem;
-    list-style: none;
-    font-size: 1.5rem;
+.nav-links { /* Gap between menu options */
+  gap: 12rem;
+  list-style: none;
+  font-size: 1.5rem;
 }
 
-a{
-    color: black;
-    text-decoration: none;
-    text-decoration-color: white;
+a { /* Nav color */
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
 }
-a:hover{ /*line under topics*/
-    color: grey;
-    text-decoration: underline;
-    text-underline-offset: 1rem;
-    text-decoration-color: 181, 181,181;
+a:hover {
+  /*line under topics*/
+  color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: 181, 181, 181;
 }
-.logo{
-    font-size: 2rem;
+.logo {
+  font-size: 2rem;
 }
-.logo:hover{
-    cursor:default ;
+.logo:hover {
+  cursor: default;
 }
 
 /* Hamburger menu */
 /* Fixing hamburger to suit screen, shorten to 
 hamburger depending on screen size */
-#hamburger-nav{
-    display: none;
+#hamburger-nav {
+  display: none;
 }
-.hamburger-menu{
-    position: relative;
-    display: inline-block;
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
 }
-.hamburger-icon{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    cursor: pointer;
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
 }
 
-.hamburger-icon span{/*turn hamburger into X*/
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    transition: all 0.3 ease-in-out;
+.hamburger-icon span {
+  /*turn hamburger into X*/
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
 }
-.menu-links{
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: white;
-    width: fit-content;
-    max-height: 0;
-    overflow: hidden;
-    transition: all 0.3 ease-in-out;
+.menu-links { /* Backround of words in hamburger */
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
 }
-.menu-links a{
-    display: block;
-    padding: 10px;
-    text-align: center;
-    font-size: 1.5rem;
-    color: black;
-    text-decoration: none;
-    transition: all 0.3 ease-in-out;
+.menu-links a { /* Words in hamburger */
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
 }
 .menu-links li {
-    list-style: none;
+  list-style: none;
 }
 /* linked to JS */
-.menu-links.open{
-max-height: 300px;
+.menu-links.open {
+  max-height: 300px;
 }
-.hamburger-icon.open span:first-child{
-    transform: rotate(45deg) translate(10px, 5px);
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
 }
-.hamburger-icon.open span:nth-child(2){
-   opacity: 0;
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
 }
-.hamburger-icon.open span:last-child{
-    transform: rotate(-45deg) translate(10px, -5px);
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
 }
-.hamburger-icon span:first-child{
-    transform: none;
+.hamburger-icon span:first-child {
+  transform: none;
 }
-.hamburger-icon span:first-child{
-    opacity: 1;
+.hamburger-icon span:first-child {
+  opacity: 1;
 }
-.hamburger-icon span:first-child{
-    transform: none;
+.hamburger-icon span:first-child {
+  transform: none;
 }
 
 /* Sections */
-section{
-    padding-top: 4vh;
-    height: 96vh;
-    margin: 0 10rem;
-    box-sizing: border-box;
-    min-height: fit-content;
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
 }
-.section-container{
-    display: flex;
-}
-
-/* Profile */
-#profile{
-    display: flex;
-    justify-content: center;
-    gap: 5rem;
-    height: 80vh;
-}
-.section__pic-container{
-    display: flex;
-    height: 600px;
-    width: 600px;
-    margin: auto 0;
-}
-.section__text{
-    align-self: center;
-    text-align: center;
-}
-.section__text p{
-    font-weight: 600;
-}
-.section__text__p1{
-    text-align: center;
-    font-size: 2rem;
+.section-container {
+  display: flex;
 }
 
-.section__text__p2{
-    font-size: 1.75rem;
-    margin-bottom: 1rem;
+/* Profile */ 
+#profile { /*Main text positioning */
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
 }
-.title{
-    font-size: 3rem;
-    text-align: center;
+.section__pic-container {
+  display: flex;
+  height: 600px;
+  width: 600px;
+  margin: auto 0;
 }
-#socials-container{
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-    gap: 1rem;
+.section__text { /* Gap betw buttons and icons*/
+  align-self: center;
+  text-align: center;
+}
+.section__text p { /* Software Dev text */
+  font-weight: 600
+}
+.section__text__p1 { /* Hello I'm text */
+  text-align: center;
+  font-size: 2rem;
+}
+
+.section__text__p2 { /* Soft dev text */
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+.title { /* Sam Cullen text*/
+  font-size: 3rem;
+  text-align: center;
+}
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
 }
 
 /* Icons */
-.icon{
-    cursor: pointer;
-    height: 2rem;
+.icon {
+  cursor: pointer;
+  height: 2rem;
 }
 
 /* Buttons */
-.btn-container{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 .btn {
-    font-weight: 600;
-    transition: all 300ms ease;
-    padding: 1rem;
-    width: 8rem;
-    border-radius: 2rem;
-}
-.btn-color-1, 
-.btn-color-2{
-    border: rgb(53,53,53) 0.1rem solid;
-}
-
-.btn-color-1:hover, 
-.btn-color-2:hover{
-   cursor: pointer;
-}
-
-.btn-color-1, 
-.btn-color-2:hover{
-    background: rgb(53,53,53);
-    color: white;
-}
-.btn-color-1:hover{
-    background: rgb(0,0,0);
-}
-.btn-color-2{
-    background: none;
-}
-.btn-color-2:hover{
-    border: rgb(255,255,255) 0.1rem solid;
-}
-.btn-container{
-    gap: 1rem;
-}
-
-/* Buttons */
-.btn-container{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-}
-.btn{
-    font-weight: 600;
-    transition: all 300ms ease;
-    padding: 1rem;
-    width: 8rem;
-    border-radius: 2rem;
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
 }
 .btn-color-1,
- .btn-color-2{
-    border: rgb(53,53,53) 0.1rem solid;
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
+}
+.btn-color-2 {
+  background: none;
+}
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+.btn-container {
+  gap: 1rem;
+}
+
+/* Buttons Download CV & Contact info */
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  height: 4rem;
+  border-radius: 2rem;
+}
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
 }
 .btn-color-1:hover,
- .btn-color-2:hover{
-    cursor: pointer;
+.btn-color-2:hover {
+  cursor: pointer;
 }
 
 .btn-color-1,
- .btn-color-2:hover{
-    background: rgb(53,53,53);
-    color: white;
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
 }
-.btn-color-1:hover{
-    background: rgb(0,0,0);
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
 }
-.btn-color-2{
-    background: none;
+.btn-color-2 {
+  background: none;
 }
-.btn-color-2:hover{
-    border: rgb(255,255,255)0.1rem solid;
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
 }
-.btn-container{
-    gap: 1rem;
+.btn-container {
+  gap: 1rem;
 }
-
-
-
