--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
 }
 .nav-links {
   /* Gap between menu options */
-  gap: 12rem;
+  gap: 2rem;
   list-style: none;
   font-size: 1.5rem;
 }
@@ -81,13 +81,13 @@ hamburger depending on screen size */
   width: 30px;
   cursor: pointer;
 }
-
+ 
 .hamburger-icon span {
-  /*turn hamburger into X*/
+  /*hamburger icon details*/
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3 ease-in-out;
+  transition:  0.3 ease-in-out;
 }
 .menu-links {
   /* Backround of words in hamburger */
@@ -282,32 +282,42 @@ section {
   gap: 1rem;
 }
 /* Page 2 */
-/* About section */
+/* ABOUT SECTION */
+
 #about {
   position: relative;
 }
+
 .about-containers {
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
+
 .about-details-container {
   justify-content: center;
   flex-direction: column;
 }
+
 .about-containers,
 .about-details-container {
   display: flex;
 }
+
 .about-pic {
   border-radius: 2rem;
+  height: 40vh; /* edit in/out */
+  width: 200vh; /* edit in/out */
 }
+
 .arrow {
   position: absolute;
   right: -5rem;
   bottom: 2.5rem;
 }
-.details-container {
+
+
+.details-containers {
   padding: 1.5rem;
   flex: 1;
   background: white;
@@ -315,4 +325,48 @@ section {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 80%;
+}
+
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+/* Experience section */
+#experience{
+  position: relative;
+}
+.experience-sub-title{
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+.experience-details-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.article-container{ /* Skills wrap under eachother to fit more */
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+article{
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+article .icon{
+  cursor: default;
 }
