--- a/style.css
+++ b/style.css
@@ -430,3 +430,25 @@ article {
 article .icon {
   cursor: default;
 }
+
+/* Projects section */
+#projects{
+  position: relative;
+}
+.color-container{
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+}
+.project-img{
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+.project-title{
+margin: 1rem;
+color: black;
+}
+.project.btn{
+  color:black;
+  border-color: rgb(163, 163, 163);
+}
