Media viewing update
Created media queries for viewing portfolio on mobile, tablet, etc

Added footer & made some styling changes

--- a/style.css
+++ b/style.css
@@ -486,3 +486,11 @@ color: black;
 .email-icon{
   height: 2.5rem;
 }
+/* Footer section */
+footer{
+  height: 26vg;
+  margin: 0 1rem;
+}
+footer p{
+  text-align: center;
+}
